# rustling

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustling.example.toml
src/: config.rs  db.rs  email.rs  llm.rs  main.rs  models.rs  pipeline.rs
src/source/: mcp.rs  mod.rs  rss.rs  searxng.rs
